Add Rubik-Italic font. Rename ViewController to HomeViewController. HomeVC - abstract out UI setup code into smaller methods

--- a/Complete/Werdd/Werdd/Info.plist
+++ b/Complete/Werdd/Werdd/Info.plist
@@ -8,6 +8,7 @@
 		<string>Rubik-Light.ttf</string>
 		<string>Rubik-Regular.ttf</string>
 		<string>Rubik-SemiBold.ttf</string>
+		<string>Rubik-Italic.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
