--- a/Starter/Werdd/Werdd/Info.plist
+++ b/Starter/Werdd/Werdd/Info.plist
@@ -4,12 +4,13 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Rubik-SemiBoldItalic.ttf</string>
 		<string>Rubik-Bold.ttf</string>
 		<string>Rubik-Light.ttf</string>
 		<string>Rubik-Regular.ttf</string>
 		<string>Rubik-SemiBold.ttf</string>
+		<string>Rubik-Italic.ttf</string>
 		<string>Rubik-LightItalic.ttf</string>
+		<string>Rubik-SemiBoldItalic.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
