--- a/Complete/Werdd/Werdd.xcodeproj/xcshareddata/xcschemes/Werdd.xcscheme
+++ b/Complete/Werdd/Werdd.xcodeproj/xcshareddata/xcschemes/Werdd.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F3B6EBA22A26D35F005078B1"
+               BuildableName = "WerddTests.xctest"
+               BlueprintName = "WerddTests"
+               ReferencedContainer = "container:Werdd.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
